
- GPR#1330: when generating dynamically-linkable code on AArch64, always
  reference symbols (even locally-defined ones) through the GOT.
  (Mark Shinwell, review by Xavier Leroy)

- MPR#7616, GPR#1339: don't warn on mutation of zero size blocks.
  (Leo White)

- MPR#7631, GPR#1355: "-linscan" option crashes ocamlopt
  (Xavier Clerc, report by Paul Steckler)

### Tools:

- MPR#1956, GPR#973: tools/check-symbol-names checks for globally
  linked names not namespaced with caml_
  (Stephen Dolan)

- MPR#6928, GPR#1103: ocamldoc, do not introduce an empty <h1> in index.html
  when no -title has been provided
  (Pierre Boutillier)

- MPR#7048: ocamldoc, in -latex mode, don't escape Latin-1 accented letters
  (Xavier Leroy, report by Hugo Herbelin)

- MPR#7575, GPR#1219: Switch default from -no-keep-locs to -keep-locs. This
  provides better error messages by default.
  (Daniel Bünzli)

* MPR#7351: ocamldoc, use semantic tags rather than <br> tags in the html
  backend
  (Florian Angeletti, request and review by Daniel Bünzli )

* MPR#7352, MPR#7353: ocamldoc, better paragraphs in html output
  (Florian Angeletti, request by Daniel Bünzli)

* MPR#7363, GPR#830: ocamldoc, start heading levels at {1 not {2 or {6.
  This change modifies the mapping between ocamldoc heading level and
  html heading level, breaking custom css style for ocamldoc.
  (Florian Angeletti, request and review by Daniel Bünzli)

* MPR#7478, GPR#1037: ocamldoc, do not use as a module preamble documentation
  comments that occur after the first module element. This change may break
  existing documenation. In particular, module preambles must now come before
  any `open` statement.
  (Florian Angeletti, review by David Allsopp and report by Daniel Bünzli)

- MPR#7521, GPR#1159: ocamldoc, end generated latex file with a new line
  (Florian Angeletti)

- MPR#7610, GPR#1346: caml.el (the Emacs editing mode) was cleaned up
  and made compatible with Emacs 25.
  (Stefan Monnier, Christophe Troestler)
